gitops/homelabapi/deploy.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: homelabapi
  labels:
    pod-security.kubernetes.io/enforce: restricted

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: homelabapi
  labels:
    app.kubernetes.io/name: homelab-api
    app.kubernetes.io/instance: internal
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: homelab-api
      app.kubernetes.io/instance: internal
  template:
    metadata:
      labels:
        app.kubernetes.io/name: homelab-api
        app.kubernetes.io/instance: internal
    spec:
      containers:
      - name: homelab-api
        image: ghcr.io/thomasbuchinger/homelab-api:main
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
        livenessProbe:
          httpGet:
            path: /api/livez
            port: 8080
        readinessProbe:
          httpGet:
            path: /api/readyz
            port: 8080
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          seccompProfile:
            type: RuntimeDefault
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
---
apiVersion: v1
kind: Service
metadata:
  name: homelab-api
  namespace: homelabapi
  labels:
    app.kubernetes.io/name: homelab-api
    app.kubernetes.io/instance: internal
spec:
  selector:
    app.kubernetes.io/name: homelab-api
    app.kubernetes.io/instance: internal
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homelab-api-http
  namespace: homelabapi
spec:
  rules:
  - host: api.10.0.0.16.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homelab-api
            port:
              number: 8080
